re PR lto/48538 (profiled LTO bootstrap failure with Ada)

PR lto/48538
	* lto-cgraph.c (merge_profile_summaries): Check that lto_file_data
	is non-null before accessing it.
	(input_cgraph): Remove trailing spaces.

From-SVN: r172612